Fix stars overflowing on Chrome

--- a/src/styles/pages/_index.scss
+++ b/src/styles/pages/_index.scss
@@ -29,7 +29,7 @@ main {
       position: absolute;
       top: 0;
       left: 0;
-      width: 100vw;
+      width: 100%;
       height: 100vh;
       overflow: hidden;
       z-index: -1;
